# axolotl-stack

./: .gitignore  .gitmodules  Cargo.toml  PLUGIN_ARCHITECTURE.md  README.md  REVIEW.md  mcpe_gen_marker.txt  rust-toolchain.toml  unastar.toml
crates/axelerator/: Cargo.toml  README.md
crates/axelerator/src/: config.rs  lib.rs  main.rs  session.rs  token_cache.rs  transfer.rs
crates/axolotl-xbl/: Cargo.toml  README.md
crates/axolotl-xbl/src/: constants.rs  error.rs  friends.rs  lib.rs  playfab.rs  presence.rs  rta.rs  session.rs
crates/axolotl-xbl/src/auth/: device_code.rs  mod.rs  signing.rs  xbl_token.rs
crates/axolotl-xbl/tests/: auth_tests.rs
crates/bds-extractor/: Cargo.toml
crates/bds-extractor/src/: main.rs  output.rs
crates/example-plugin/: Cargo.toml  plugin.toml
crates/example-plugin/src/: lib.rs
crates/jolyne/: Cargo.toml  README.md
crates/jolyne/docs/: TRACING_AND_FEATURES.md
crates/jolyne/examples/: nethernet_client.rs  nethernet_server.rs  proxy.rs  simple_client.rs  simple_server.rs  stress_test.rs
crates/jolyne/src/: batch.rs  config.rs  error.rs  gamedata.rs  lib.rs  listener.rs  raw.rs  stream.rs  valentine.rs  world.rs
crates/jolyne/src/auth/: client.rs  legacy.rs  mod.rs  openid.rs
crates/jolyne/src/stream/: client.rs  mod.rs  server.rs  transport.rs
crates/jolyne/src/stream/transport/: inner.rs  mod.rs  nethernet.rs  raknet.rs
crates/tokio-nethernet/: Cargo.toml  README.md
crates/tokio-nethernet/benches/: signaling_benchmark.rs  stream_benchmark.rs
crates/tokio-nethernet/examples/: client.rs  discovery_client.rs  discovery_server.rs  listener.rs
crates/tokio-nethernet/src/: dialer.rs  error.rs  lib.rs  listener.rs  signaling.rs  stream.rs  xbox_signaling.rs
crates/tokio-nethernet/src/discovery/: crypto.rs  mod.rs  packet.rs
crates/tokio-nethernet/tests/: discovery_test.rs  integration_test.rs
crates/tokio-raknet/: Cargo.toml  README.md
crates/tokio-raknet/benches/: ack_benchmark.rs  codec_benchmark.rs  process_datagram.rs  session_hotpath.rs  split_benchmark.rs  throughput_stress.rs  varint_benchmark.rs
crates/tokio-raknet/examples/: basic_client.rs  basic_server.rs  minecraft_start.rs
crates/tokio-raknet/src/: lib.rs
crates/tokio-raknet/src/protocol/: datagram.rs
crates/tokio-raknet/src/session/: ack_queue.rs  inbound.rs  mod.rs  outbound.rs
crates/tokio-raknet/src/transport/: listener.rs  mux.rs  stream.rs
crates/tokio-raknet/src/transport/listener/: offline.rs  online.rs  rate_limiter.rs
crates/tokio-raknet/tests/: integration_handshake.rs  reproduce_handshake_bug.rs
crates/unastar/: Cargo.toml  LONGTERM.md  README.md  ROADMAP.md  STAKEHOLDERS.md  unastar.toml
crates/unastar-api/: Cargo.toml
crates/unastar-api/src/: lib.rs  native.rs  player_wrapper.rs
crates/unastar-api/src/native/: components.rs  host.rs  player.rs
crates/unastar/.cargo/: cargo.toml
crates/unastar/benches/: density_benchmark.rs  detailed_generation.rs  world_generation.rs
crates/unastar/examples/: debug_worldgen.rs  find_biomes.rs  test_chunk_gen.rs  test_density.rs  test_noise.rs
crates/unastar/src/: lib.rs  main.rs
crates/unastar/src/command/: mod.rs
crates/unastar/src/config/: mod.rs
crates/unastar/src/data/: creative_construction.json  required_item_list.json
crates/unastar/src/ecs/: app.rs  events.rs  mod.rs  resources.rs  schedules.rs
crates/unastar/src/entity/: bundles.rs  damage.rs  metadata.rs  mod.rs
crates/unastar/src/entity/components/: inventory.rs  item.rs  living.rs  mob.rs  mod.rs  player.rs  projectile.rs  transform.rs
crates/unastar/src/entity/systems/: effects.rs  lifecycle.rs  mod.rs  physics.rs
crates/unastar/src/item/: mod.rs  stack.rs
crates/unastar/src/network/: events.rs  mod.rs
crates/unastar/src/plugin/: loader.rs  manager.rs  manifest.rs  mod.rs  player_ext.rs  registry.rs
crates/unastar/src/registry/: biome.rs  block.rs  creative.rs  entity.rs  item.rs  mod.rs
crates/unastar/src/server/: broadcast.rs  config.rs  connect.rs  mod.rs  monitor.rs  runtime.rs  timer.rs
crates/unastar/src/server/game/: blocks.rs  chunks.rs  commands.rs  content.rs  host.rs  join.rs  lifecycle.rs  mod.rs  packet_domains.rs  packet_router.rs  packet_routing.rs  packets.rs  persistence.rs  player_management.rs  plugins.rs  types.rs
crates/unastar/src/storage/: blazedb.rs  cache.rs  keys.rs  leveldb_player.rs  leveldb_world.rs  mod.rs  morton.rs  provider.rs
crates/unastar/src/world/: chunk.rs  mod.rs
crates/unastar/src/world/ecs/: components.rs  events.rs  generation_worker.rs  loader.rs  manager.rs  mod.rs  systems.rs
crates/unastar_noise/: Cargo.toml  build.rs
crates/unastar_noise/codegen/: mod.rs
crates/unastar_noise/codegen/analyzer/: mod.rs
crates/unastar_noise/codegen/emitter/: biome_features.rs  compiled.rs.old  density_function.rs  emitter_quote.rs  mod.rs  noise.rs  surface_rule.rs
crates/unastar_noise/codegen/parser/: biome.rs  density_function.rs  mod.rs  noise.rs  noise_settings.rs  surface_rule.rs
crates/unastar_noise/src/: biome.rs  biome_tables.rs  lib.rs  noise.rs  types.rs  xoroshiro.rs
crates/unastar_noise/src/surface/: condition.rs  context.rs  mod.rs  rule.rs
crates/valentine/: .gitignore  Cargo.toml  README.md
crates/valentine/bedrock_core/: Cargo.toml
crates/valentine/bedrock_core/src/: item.rs
crates/valentine/bedrock_versions/v1_21_130/: Cargo.toml
crates/valentine/examples/: raknet_first_packet.rs
crates/valentine/src/: lib.rs
crates/valentine/src/bedrock/: codec.rs  mod.rs  protocol.rs  version.rs
crates/valentine/src/protocol/: mod.rs  wire.rs
crates/valentine/tests/: bedrock_roundtrip.rs  start_game_roundtrip.rs
crates/valentine_gen/: Cargo.toml  README.md
crates/valentine_gen/src/: ir.rs  main.rs
crates/valentine_gen/src/data_generator/: biomes.rs  block_states.rs  blocks.rs  entities.rs  items.rs  mod.rs
crates/valentine_gen/src/generator/: analysis.rs  codec.rs  context.rs  definitions.rs  mod.rs  primitives.rs  resolver.rs  structs.rs  utils.rs
crates/valentine_gen/src/parser/: mod.rs
(+2053 files in other folders)
