[workspace]
resolver = "3"
members = [
    "crates/valentine",
    "crates/jolyne",
    "crates/unastar",
    "crates/valentine_gen",
    "crates/tokio-raknet",
    "crates/tokio-nethernet",
    "crates/axolotl-xbl",
    "crates/axelerator",
]

# use our patched version that statically links in zlib and snappy.
[patch.crates-io]
bleveldb-sys = { path = "./deps/bleveldb-sys" }
