[package]
name = "axelerator"
version = "0.1.0"
edition.workspace = true
description = "Xbox Live friend broadcast server - makes Minecraft servers joinable via friends list"
license.workspace = true
publish = false

[dependencies]
# Xbox Live APIs
axolotl-xbl.workspace = true

# NetherNet for WebRTC signaling fallback
tokio-nethernet = { workspace = true, features = ["xbox-signaling"] }

# Bedrock protocol for handshake and transfer
jolyne = { workspace = true, features = ["server", "xbox-signaling"] }

# Crypto for handshake
p384.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

# Utilities
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
rand.workspace = true
