[package]
name = "axolotl-xbl"
version = "0.1.0"
edition.workspace = true
description = "Xbox Live API client for the axolotl-stack - authentication, friends, sessions, and signaling"
license.workspace = true

[features]
default = []

[dependencies]
# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Cryptography for signed requests
p256.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true

# WebSocket for RTA
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util.workspace = true
url.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
