[package]
name = "jolyne"
version = "0.1.0"
edition = "2024"

[features]
default = ["full"]
client = ["dep:jsonwebtoken"]
server = ["dep:reqwest", "dep:jsonwebtoken"]
full = ["client", "server"]

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
bytes = "1.8.0"
thiserror = "1.0"
tokio-raknet = { path = "../tokio-raknet"}
valentine = { path = "../valentine", default-features = false, features = ["bedrock_1_21_130"] }
flate2 = "1.0"
jsonwebtoken = { version = "9.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
aes-gcm = { version = "0.10", features = ["aes"] }
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }
rand = "0.8"
once_cell = "1.19"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"
required-features = ["client"]

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"
required-features = ["server"]

[[example]]
name = "proxy"
path = "examples/proxy.rs"
required-features = ["full"]
