[package]
name = "jolyne"
version = "0.1.0"
edition = "2024"

[features]
default = ["full", "raknet"]
client = ["dep:jsonwebtoken"]
server = ["dep:reqwest", "dep:jsonwebtoken"]
full = ["client", "server"]
raknet = ["dep:tokio-raknet"]
nethernet = ["dep:tokio-nethernet"]
discovery = ["nethernet", "tokio-nethernet/discovery"]
xbox-signaling = ["nethernet", "tokio-nethernet/xbox-signaling"]

[dependencies]
tokio = { version = "1.41.1", features = ["sync", "time"] }
bytes = "1.8.0"
thiserror = "1.0"
tokio-raknet = { path = "../tokio-raknet", version = "0.3", optional = true }
tokio-nethernet = { path = "../tokio-nethernet", version = "0.1", optional = true }
valentine = { path = "../valentine", default-features = false, features = [
    "bedrock_1_21_130",
] }
flate2 = "1.0"
futures = "0.3"
jsonwebtoken = { version = "9.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
aes-gcm = { version = "0.10", features = ["aes"] }
p384 = { version = "0.13", features = ["ecdh", "pkcs8"] }
rand = "0.8"
once_cell = "1.19"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"
required-features = ["client", "raknet"]

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"
required-features = ["server", "raknet"]

[[example]]
name = "proxy"
path = "examples/proxy.rs"
required-features = ["full", "raknet"]

[[example]]
name = "nethernet_server"
path = "examples/nethernet_server.rs"
required-features = ["server", "discovery"]

[[example]]
name = "nethernet_client"
path = "examples/nethernet_client.rs"
required-features = ["client", "discovery"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = ["client", "raknet"]
