[package]
name = "jolyne"
version = "0.1.0"
edition.workspace = true

[features]
default = ["full", "raknet"]
client = ["dep:jsonwebtoken"]
server = ["dep:reqwest", "dep:jsonwebtoken"]
full = ["client", "server"]
raknet = ["dep:tokio-raknet"]
nethernet = ["dep:tokio-nethernet"]
discovery = ["nethernet", "tokio-nethernet/discovery"]
xbox-signaling = ["nethernet", "tokio-nethernet/xbox-signaling"]

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
bytes.workspace = true
thiserror = "1.0"  # Keep at 1.0 for now - jolyne uses thiserror 1.x API
tokio-raknet = { workspace = true, optional = true }
tokio-nethernet = { workspace = true, optional = true }
valentine = { workspace = true, features = ["bedrock_1_21_130"] }
flate2.workspace = true
futures.workspace = true
jsonwebtoken = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
sha2.workspace = true
aes.workspace = true
ctr.workspace = true
aes-gcm.workspace = true
p384.workspace = true
rand.workspace = true
once_cell.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
anyhow.workspace = true
clap.workspace = true

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"
required-features = ["client", "raknet"]

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"
required-features = ["server", "raknet"]

[[example]]
name = "proxy"
path = "examples/proxy.rs"
required-features = ["full", "raknet"]

[[example]]
name = "nethernet_server"
path = "examples/nethernet_server.rs"
required-features = ["server", "discovery"]

[[example]]
name = "nethernet_client"
path = "examples/nethernet_client.rs"
required-features = ["client", "discovery"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = ["client", "raknet"]
