[package]
name = "tokio-nethernet"
version = "0.1.0"
edition.workspace = true
description = "A Tokio-based implementation of the NetherNet protocol (WebRTC transport for Minecraft Bedrock)."
license.workspace = true

[features]
default = []
discovery = ["aes", "sha2", "hmac", "ecb", "hex"]
xbox-signaling = [
    "tokio-tungstenite",
    "http",
    "tungstenite",
    "uuid",
    "futures-util",
]

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "net", "macros"] }
webrtc.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio-util = { workspace = true, features = ["codec", "compat", "net"] }
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rand.workspace = true

# Optional crypto dependencies for discovery feature
aes = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
ecb = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Optional dependencies for xbox-signaling feature
tokio-tungstenite = { workspace = true, features = ["native-tls"], optional = true }
http = { workspace = true, optional = true }
tungstenite = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["full", "test-util"] }
criterion.workspace = true

[[example]]
name = "discovery_client"
required-features = ["discovery"]

[[example]]
name = "discovery_server"
required-features = ["discovery"]

[[bench]]
name = "signaling_benchmark"
harness = false

[[bench]]
name = "stream_benchmark"
harness = false
