[package]
name = "tokio-raknet"
version = "0.3.0"
edition.workspace = true
description = "A high-performance, asynchronous implementation of the RakNet protocol on top of Tokio."
license.workspace = true
repository.workspace = true
keywords = ["raknet", "game-networking", "udp", "tokio", "async"]
categories = ["network-programming", "game-development", "asynchronous"]
readme = "README.md"
exclude = ["benches", "tests"]

[dependencies]
bitflags.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time", "rt", "macros"] }
tracing.workspace = true
futures.workspace = true
tokio-util = { workspace = true, features = ["codec", "net"] }

[dev-dependencies]
criterion.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "codec_benchmark"
harness = false

[[bench]]
name = "ack_benchmark"
harness = false

[[bench]]
name = "split_benchmark"
harness = false

[[bench]]
name = "varint_benchmark"
harness = false

[[bench]]
name = "process_datagram"
harness = false

[[bench]]
name = "session_hotpath"
harness = false

[[bench]]
name = "throughput_stress"
harness = false
