[package]
name = "unastar_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.5", features = ["derive"] }
unastar_api_macros = { path = "../unastar-api-macros" }

# For native plugins (non-WASM builds) - use workspace version!
bevy_ecs = { workspace = true, optional = true }
abi_stable = { version = "0.11", optional = true }

[features]
default = []
native = ["bevy_ecs", "abi_stable"]
