[package]
name = "unastar"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
jolyne = { path = "../jolyne", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tokio-raknet = { path = "../tokio-raknet" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
p384 = "0.13"
rand = "0.8"
zuri_nbt = "0.4"
valentine = { path = "../valentine", default-features = false, features = [
    "bedrock_1_21_130",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml_edit = { version = "0.23", features = ["serde"] }
glam = "0.30"
uuid = { version = "1", features = ["v4"] }
bevy_ecs = "0.17"
async-trait = "0.1"
bleveldb = "1"
serde_json = "1"
