[package]
name = "unastar"
version = "0.1.0"
edition.workspace = true

[dependencies]
bytes.workspace = true
jolyne = { workspace = true, features = ["server", "raknet"] }
tokio = { workspace = true, features = ["full"] }
tokio-raknet.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
p384.workspace = true
rand.workspace = true
zuri_nbt.workspace = true
valentine = { workspace = true, features = ["bedrock_1_21_130"] }
serde.workspace = true
thiserror.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
glam.workspace = true
uuid.workspace = true
bevy_ecs.workspace = true
async-trait.workspace = true
bleveldb.workspace = true
serde_json.workspace = true

# BlazeDB dependencies
lru = "0.12"
parking_lot = "0.12"
lz4_flex = "0.11"
crc32fast = "1.4"

#dhat = "0.3"
# tracy-client = "0.18"
bitflags = "2.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "world_generation"
harness = false
